--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         <input type="hidden" name="_subject" value="Patient Path NYC - Contact Form">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="http://edoliberty.github.io/patient-path-nyc/thank-you.html">
+                        <input type="hidden" name="_next" value="https://patientpathnyc.com/thank-you.html">
                         <input type="text" name="_honey" style="display:none">
                         <button type="submit" class="submit-button">Send Message</button>
                     </form>
