--- a/thank-you.html
+++ b/thank-you.html
@@ -41,7 +41,7 @@
                     We've received your message and will get back to you as soon as possible.
                 </p>
                 <p style="font-size: 1rem; margin-bottom: 2rem;">
-                    If you need urgent assistance, please call or text us at <a href="tel:9172832765" style="color: #2c5f8d; text-decoration: underline;">(917) 283-2765</a>
+                    If you need urgent assistance, please call or text us at <a href="tel:9172832765" style="color: #ffffff; text-decoration: underline;">(917) 283-2765</a>
                 </p>
                 <a href="index.html" class="cta-button">Return to Home</a>
             </div>
