fix favicon error

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.patientpathnyc.com">
     <title>Patient Path NYC - Patient Advocacy Services</title>
+    <link rel="icon" type="image/png" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Structured Data for SEO and AI Agents -->
