--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         Public speaker and trainer on topics related to advocacy during hospital stays and clinical topics in the field of Speech-Language Pathology (swallowing, language, and cognition).
                     </p>
                     <p>
-                        Mother of three (and a dog). Passionate about supporting others with empathy, kindness, and attention to detail.
+                        New York based wife and mother of three (and a dog). Passionate about supporting others with empathy, kindness, and attention to detail.
                     </p>
                 </div>
                 
@@ -394,7 +394,7 @@
                 <div class="about-card">
                     <h3>Contact us</h3>
                     <p>
-                        To schedule a <strong>free</strong> 20-minute initial consultation or to inquire about our services, please send us a message. 
+                        To schedule a <u>free</u> 20-minute initial consultation or to inquire about our services, please send us a message. 
                     </p>
                     <form class="contact-form" id="contactForm" action="https://formsubmit.co/shlomit@patientpathnyc.com" method="POST" aria-label="Contact form">
                         <div class="form-group">
