--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) - start -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN54P65Y3Y"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FN54P65Y3Y');
+    </script>
+    <!-- Google tag (gtag.js) - end -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Frequently Asked Questions about Patient Path NYC - Patient advocacy services for hospitalized patients in New York City.">
