prevent-cognitive-decline

--- a/resources.html
+++ b/resources.html
@@ -103,6 +103,12 @@
                     <a href="safe-discharge.html" class="cta-button">View Guide</a>
                     <a href="files/How-to-Prepare-for-a-Safe-Discharge.pdf" class="cta-button">Download</a>
                 </article>
+                <article class="resource-item">
+                    <h3>How to Prevent Cognitive Decline During Hospitalization</h3>
+                    <p>Key strategies to protect memory, attention, and mental clarity during your hospital stay, especially for older adults.</p>
+                    <a href="prevent-cognitive-decline.html" class="cta-button">View Guide</a>
+                    <a href="files/How-to-Prevent-Cognitive-Decline-During-Inpatient-Stay.pdf" class="cta-button">Download</a>
+                </article>
             </div>
         </div>
     </section>
