--- a/communicate-symptoms.html
+++ b/communicate-symptoms.html
@@ -210,8 +210,8 @@
                 </article>
 
                 <article class="practice-card">
-                    <h4>Bring Notes</h4>
-                    <p>Use written notes to make sure you cover everything important during your appointment.</p>
+                    <h4>Bring/Take Notes</h4>
+                    <p>Brings notes of your symptoms and medical history. Take notes of all that is communicated for better recall.</p>
                 </article>
 
                 <article class="practice-card">
